--- a/templates/blog/home.html.twig
+++ b/templates/blog/home.html.twig
@@ -9,7 +9,7 @@
 
 {% block body %}
 
-    <h1>Bienvenue sur le blog Symfony 🐱‍🐉</h1>
+    <h1>Bienvenue sur le blog Symfony (tu es sur la HomePage) 🐱‍🐉</h1>
     {#
         TWIG est un langage de rendu. Avantage
         - simplicité du langage : facilités d'écriture et d'affichage, apporte beaucoup de fonctionnalités
