--- a/templates/blog/blog.html.twig
+++ b/templates/blog/blog.html.twig
@@ -39,7 +39,8 @@ Hello BlogController!
 							<p class="card-text mb-auto">{{ oneArticle.contenu|slice(0,80)|raw}}[...]</p>
 
 							{# On définit le lien permettant de rediriger l'internaute vers l'affichage du détail de l'article #}
-							{# 'blog_show' correspond à la route permettant l'affichage du détail de l'article #}
+							{# 'blog_show' correspond à la route permettant l'affichage du détail de l'article 
+							@Route("/blog/{id}", name="blog_show")#}
 							{# C'est une route paramétrée qui attend un ID d'un article dans l'URL #}
 							{# en 2ème arguement de la fonction path(), nous fournissons l'id de l'article à transmettre dans l'URL ({'id': oneArticle.id}) #}
 						<a href="{{path('blog_show', {'id': oneArticle.id})}}" class="stretched-link">Lire la suite</a>
