relation entité + fixtures + dev templates

--- a/templates/blog/create.html.twig
+++ b/templates/blog/create.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-	<h1 class="fst-italic text-center my-4">Création d'un article (formulaire Bootstrap</h1>
+	<h1 class="fst-italic text-center my-4">Création d'un article (en passant par les setters)</h1>
 
 	<form method="post">
 		<div class="mb-3">
