inscription + encodage mdp + tag

--- a/templates/blog/create2.html.twig
+++ b/templates/blog/create2.html.twig
@@ -24,6 +24,8 @@
         {{form_row(formArticle.titre, {'label': "Titre de l'article"}) }}
 
         {{form_row(formArticle.category, {'label': "Catégorie de l'article"}) }}
+
+        {{ form_row(formArticle.tags) }}
         
         {{form_row(formArticle.contenu)}}
 
